@@ -1,0 +1,9 @@
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+	<f:spaceless>
+
+		<div id="{settings.slickgalleryid}" class="{f:if(condition: data.tx_start_additionalclassdefined, then: ' {data.tx_start_additionalclassdefined}')}{f:if(condition: data.tx_start_additionalclass, then: ' {data.tx_start_additionalclass}')}">
+			<f:render section="Main" optional="true" />
+		</div>
+
+	</f:spaceless>
+</html>
