@@ -1,0 +1,91 @@
+<div xmlns="http://www.w3.org/1999/xhtml" lang="en"
+	 xmlns:v="http://typo3.org/ns/FluidTYPO3/Vhs/ViewHelpers"
+	 xmlns:f="http://xsd.helhum.io/ns/typo3/cms-fluid/master/ViewHelpers"
+	 xmlns:bo="http://typo3.org/ns/Bo/Slickcarousel/ViewHelpers"
+	 data-namespace-typo3-fluid="true">
+
+	<f:section name="JS-Responsive">
+		<script>
+			$(document).ready(function () {
+			$('#slickid-{data.uid}').slick({
+					  accessibility: <f:format.raw>{data.pi_flexform.accessibility}</f:format.raw>
+					,	autoplay: <f:format.raw>{data.pi_flexform.autoplay}</f:format.raw>
+					,	autoplaySpeed: <f:format.raw>{data.pi_flexform.autoplaySpeed}</f:format.raw>
+					,	centerMode: <f:format.raw>{data.pi_flexform.centerMode}</f:format.raw>
+					,	centerPadding: '<f:format.raw>{data.pi_flexform.centerPadding}</f:format.raw>'
+					,	cssEase: '<f:format.raw>{data.pi_flexform.cssEase}</f:format.raw>'
+					,	dotsClass: '<f:format.raw>{data.pi_flexform.dotsClass}</f:format.raw>'
+					,	draggable: <f:format.raw>{data.pi_flexform.draggable}</f:format.raw>
+					,	edgeFriction: <f:format.raw>{data.pi_flexform.edgeFriction}</f:format.raw>
+					,	fade: <f:format.raw>{data.pi_flexform.fade}</f:format.raw>
+					,	infinite: <f:format.raw>{data.pi_flexform.infinite}</f:format.raw>
+					,	initialSlide: <f:format.raw>{data.pi_flexform.initialSlide}</f:format.raw>
+					, lazyLoad: '<f:format.raw>{data.pi_flexform.lazyLoad}</f:format.raw>'
+					,	mobileFirst: <f:format.raw>{data.pi_flexform.mobileFirst}</f:format.raw>
+					,	pauseOnHover: <f:format.raw>{data.pi_flexform.pauseOnHover}</f:format.raw>
+					, pauseOnDotsHover: <f:format.raw>{data.pi_flexform.pauseOnDotsHover}</f:format.raw>
+					, respondTo: '<f:format.raw>{data.pi_flexform.respondTo}</f:format.raw>'
+					, rtl: <f:format.raw>{data.pi_flexform.rtl}</f:format.raw>
+					, speed: <f:format.raw>{data.pi_flexform.speed}</f:format.raw>
+					, swipe: <f:format.raw>{data.pi_flexform.swipe}</f:format.raw>
+					, swipeToSlide: <f:format.raw>{data.pi_flexform.swipeToSlide}</f:format.raw>
+					, touchMove: <f:format.raw>{data.pi_flexform.touchMove}</f:format.raw>
+					, touchThreshold: 25
+					, useCSS: <f:format.raw>{data.pi_flexform.useCSS}</f:format.raw>
+					, useTransform: true
+					, variableWidth: <f:format.raw>{data.pi_flexform.variableWidth}</f:format.raw>
+					, vertical: <f:format.raw>{data.pi_flexform.vertical}</f:format.raw>
+					, verticalSwiping: <f:format.raw>{data.pi_flexform.verticalSwiping}</f:format.raw>
+					, waitForAnimate: <f:format.raw>{data.pi_flexform.waitForAnimate}</f:format.raw>
+					, zIndex: <f:format.raw>{data.pi_flexform.zIndex}</f:format.raw>
+					, responsive: [
+						{
+								breakpoint: <f:format.raw>{data.pi_flexform.breakpoint-desktop}</f:format.raw>
+							, settings: {
+									arrows: <f:format.raw>{data.pi_flexform.arrows-desktop}</f:format.raw>
+								, dots: <f:format.raw>{data.pi_flexform.dots-desktop}</f:format.raw>
+								, rows: <f:format.raw>{data.pi_flexform.rows-desktop}</f:format.raw>
+								, slidesPerRow: <f:format.raw>{data.pi_flexform.slidesPerRow-desktop}</f:format.raw>
+								, slidesToScroll: <f:format.raw>{data.pi_flexform.slidesToScroll-desktop}</f:format.raw>
+								, slidesToShow: <f:format.raw>{data.pi_flexform.slidesToShow-desktop}</f:format.raw>
+							}
+						}
+					, {
+								breakpoint: <f:format.raw>{data.pi_flexform.breakpoint-tablet}</f:format.raw>
+							, settings: {
+									arrows: <f:format.raw>{data.pi_flexform.arrows-tablet}</f:format.raw>
+								, dots: <f:format.raw>{data.pi_flexform.dots-tablet}</f:format.raw>
+								, rows: <f:format.raw>{data.pi_flexform.rows-tablet}</f:format.raw>
+								, slidesPerRow: <f:format.raw>{data.pi_flexform.slidesPerRow-tablet}</f:format.raw>
+								, slidesToScroll: <f:format.raw>{data.pi_flexform.slidesToScroll-tablet}</f:format.raw>
+								, slidesToShow: <f:format.raw>{data.pi_flexform.slidesToShow-tablet}</f:format.raw>
+							}
+						}
+					,	{
+								breakpoint: <f:format.raw>{data.pi_flexform.breakpoint-smartphone}</f:format.raw>
+							, settings: {
+									arrows: <f:format.raw>{data.pi_flexform.arrows-smartphone}</f:format.raw>
+								, dots: <f:format.raw>{data.pi_flexform.dots-smartphone}</f:format.raw>
+								, rows: <f:format.raw>{data.pi_flexform.rows-smartphone}</f:format.raw>
+								, slidesPerRow: <f:format.raw>{data.pi_flexform.slidesPerRow-smartphone}</f:format.raw>
+								, slidesToScroll: <f:format.raw>{data.pi_flexform.slidesToScroll-smartphone}</f:format.raw>
+								, slidesToShow: <f:format.raw>{data.pi_flexform.slidesToShow-smartphone}</f:format.raw>
+							}
+						}
+					,	{
+							  breakpoint: 0
+							, settings: {
+								  arrows: <f:format.raw>{data.pi_flexform.arrows-widescreen}</f:format.raw>
+								, dots: <f:format.raw>{data.pi_flexform.dots-widescreen}</f:format.raw>
+								, rows: <f:format.raw>{data.pi_flexform.rows-widescreen}</f:format.raw>
+								, slidesPerRow: <f:format.raw>{data.pi_flexform.slidesPerRow-widescreen}</f:format.raw>
+								, slidesToShow: <f:format.raw>{data.pi_flexform.slidesToShow-widescreen}</f:format.raw>
+								, slidesToScroll: <f:format.raw>{data.pi_flexform.slidesToScroll-widescreen}</f:format.raw>
+							}
+						}
+					]
+				});
+			});
+		</script>
+	</f:section>
+</div>
