@@ -1,0 +1,9 @@
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+	<f:layout name="Slickcontent" />
+	<f:section name="Header" />
+	<f:section name="Main">
+
+		<f:render partial="Media/Slickgallery" arguments="{_all}" />
+
+	</f:section>
+</html>
